Fixed issue that forced extra space in blocks if text line count wasn't the same

--- a/code/styles/components/_block.scss
+++ b/code/styles/components/_block.scss
@@ -1,5 +1,9 @@
 .block {
 
+  @include susy-breakpoint($bp-lg) {
+    display: flex;
+  }
+
   &__item {
     display: block;
     padding-top: $padding-vertical-xl;
